--- a/_posts/2019-12-30-the-us-narrative-today.html
+++ b/_posts/2019-12-30-the-us-narrative-today.html
@@ -1,106 +1,106 @@
 ---
 images:
-- name: copper-circuit-DSC_0072.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-DSC_0072.jpg
-- name: rain-princess-border-crossing-through-fence-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-border-crossing-through-fence-2.jpg
-- name: aws-s3-stories-statue-face-open-mouth-blue-circuit-5.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-statue-face-open-mouth-blue-circuit-5.png
-- name: yosemite-yosemite-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-alien-goggles.jpg
-- name: cargo-ship-cargo-ship-on-sea-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-pablo-blue.jpg
-- name: stories-carryload-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-carryload-smoking-cigarette.jpg
-- name: redondo-beach-harbor-redondo-beach-harbor-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-crafty-painting.jpg
-- name: carry-load-carryload-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-plentiful.jpg
-- name: stories-fredericksburg-downtown-flag.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-fredericksburg-downtown-flag.jpg
-- name: bf-skinner-wild-gease-in-the-water.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-wild-gease-in-the-water.jpg
-- name: windowmountain-window-mountain-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-kand-two.jpg
-- name: art-museum-art-museum-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-wols.jpg
-- name: san-francisco-street-view-san-francisco-street-view-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-bright-sand.jpg
-- name: art-museum-art-museum-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-blue-granite.jpg
-- name: statue-face-open-mouth-statue-face-open-mouth-alberto-giacometti.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-alberto-giacometti.png
-- name: copper-circuit-old-piano-playing-hospital.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-old-piano-playing-hospital.jpg
-- name: la-muse-highway-granary_36331800650_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-highway-granary_36331800650_o.jpg
-- name: window-window-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-purp-paper.jpg
-- name: old-door-lock-old-door-lock-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-dark-dali.jpg
-- name: dragon_close-up-scream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon_close-up-scream.jpg
-- name: oldsmallboat-oldsmallboat-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-space-pizza.jpg
-- name: downtheline-downtheline-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-atari-asteroids.jpg
-- name: bf-skinner-working-waterfront-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-working-waterfront-2.jpg
-- name: bf-skinner-train-station-cloud.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-train-station-cloud.jpg
-- name: meadowbutterfly-meadow-butterfly-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-smooth-ride.jpg
-- name: server-cloud-server-racks-door-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-free-woman.jpg
-- name: gypsy-wagon-gypsywagon-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-spagetti-accident.jpg
-- name: aws-s3-stories-old-barn.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-old-barn.jpg
-- name: white-house-whitehouse-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-blue-granite.jpg
-- name: dc-statue-dcstatue-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-crunch-paper.jpg
-- name: statue-of-liberty-front-view-statueofliberty-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-ww2-color.jpg
-- name: berlinwall-DSC-0084-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-spagetti-accident.jpg
-- name: old-barn-old-barn-1500-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-oily-mcoilface.jpg
-- name: wave-DSC_0291.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wave-DSC_0291.jpg
-- name: window-window-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-aqua.jpg
-- name: crow-crow-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-plentiful.jpg
-- name: nazi-invasion-downtown-sidewalk-washington.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-downtown-sidewalk-washington.jpg
-- name: razorwire-DSC-0080-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-emily-carr.jpg
-- name: locked-up-steam-lock-up-steam-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-atari-asteroids.jpg
-- name: copper-circuit-piano-in-street-good.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-piano-in-street-good.jpg
-- name: castle-wall-DSC-0067-wols.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-wols.JPG
-- name: server-cloud-server-racks-door-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-crabapple.jpg
-- name: copper-circuit-adam-smith-edinburgh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-adam-smith-edinburgh.jpg
-- name: copper-circuit-san-francisco-salesforce-bay-bridge.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-san-francisco-salesforce-bay-bridge.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-dark-soul.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-dark-soul.JPG
-- name: rain-princess-cargo-ship_36587814601_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-cargo-ship_36587814601_o.jpg
-- name: stories-old-gas-pumps.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-old-gas-pumps.jpg
-- name: supreme-court-supremecourt-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-crabapple.jpg
+- name: birdhouse-birdhouse-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-internet-numbers.jpg
+- name: art-museum-art-museum-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-free-woman.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-wols.jpg
+- name: capital-battle-capitolbattle-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-plentiful.jpg
+- name: fence-mexico-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-plentiful.jpg
+- name: legal-statue-legalstatue-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-emily-carr.jpg
+- name: downtheline-downtheline-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-internet-numbers.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-china-prop.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-china-prop.png
+- name: berlinwall-DSC-0084-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-umberto-bocc.jpg
+- name: power-lines-power-lines-empty-space-horiz-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-horiz-circuit.jpg
+- name: abandonedbuildings_aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_aqua.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-sand-paper.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-sand-paper.JPG
+- name: legal-statue-legalstatue-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-atari-missle.jpg
+- name: old-church-oldchurch-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-sand-paper.jpg
+- name: rockingchair-rockingchair-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-dry-skin.jpg
+- name: old-door-lock-old-door-lock-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-spagetti-accident.jpg
+- name: statue-of-liberty-front-view-statueofliberty-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-blue-electricity.jpg
+- name: capital-battle-capitolbattle-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-space-pizza.jpg
+- name: blossombar-plentiful-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-plentiful-file-00-00-50-62.jpg
+- name: fence-fence-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-bright-sand.jpg
+- name: bf-skinner-supreme-court-columns.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-supreme-court-columns.jpg
+- name: oldbarn-oldbarn-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-rainbow-festival.jpg
+- name: stories-new-75-125-800-500-0-max-0-1-1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-75-125-800-500-0-max-0-1-1.jpg
+- name: lincoln-memorial-lincolnmemorial-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-smooth-ride.jpg
+- name: bluelake-green-zuma-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-green-zuma-file-00-00-00-00.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-spagetti-accident.jpg
+- name: mistywoods-babyfoot-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-colored-circuits.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-crunch-paper.jpg
+- name: legal-statue-legalstatue-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-rainbow-festival.jpg
+- name: powerlines-power-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-pablo-blue.jpg
+- name: yosemite-yosemite-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-dali-two.jpg
+- name: nazi-invasion-downtown-berlin-crowds.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-downtown-berlin-crowds.jpg
+- name: nazi-invasion-statue-liberty-clouds-front-far.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-statue-liberty-clouds-front-far.jpg
+- name: locked-up-steam-lock-up-steam-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-sunday.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-blue-circuit-3.jpg
+- name: cargo-ship-cargo-ship-on-sea-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-plentiful.jpg
+- name: stalin-time-seattle-shipping-people-walking.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-seattle-shipping-people-walking.jpg
+- name: oldhouse-granaryfield-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-green-zuma.jpg
+- name: stalin-time-old-ship-waterfront-harbor.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-old-ship-waterfront-harbor.jpg
+- name: cannon-wall-satan.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cannon-wall-satan.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-pablo-blue.jpg
+- name: dc-statue-dcstatue-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-hot-spicy.jpg
+- name: miamibeach-miamibeach-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-really-hot.jpg
+- name: nazi-invasion-statue-of-liberty_36744433525_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-statue-of-liberty_36744433525_o.jpg
+- name: rockingchair-rockingchair-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-blue-circuit.jpg
 - name: rockingchair-rockingchair-sand-paper.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-sand-paper.jpg
-- name: sand-hand-sand-hand-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-dali-three.jpg
-- name: nazi-invasion-city-skyline-bright.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-city-skyline-bright.jpg
+- name: rockingchair-rockingchair-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-purple-pond.jpg
+- name: old-granary-field-oldhouse-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-blue-electricity.jpg
+- name: birdhouse-birdhouse-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-alien-goggles.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-blue-electricity.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-blue-electricity.JPG
+- name: copper-circuit-high-speed-train-station-france.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-high-speed-train-station-france.jpg
 ---
 
